fix(search-page): adjust author/date spacing

--- a/src/components/search/search-result.module.scss
+++ b/src/components/search/search-result.module.scss
@@ -29,7 +29,7 @@
   }
 
   .date {
-    color: $color-slate-700;
+    color: $color-slate-600;
   }
 
   .children-container {
@@ -38,5 +38,10 @@
 }
 
 .result-details {
-  margin-top: spacer(16);
+  margin-bottom: 0;
+  margin-top: spacer(8);
+  p {
+    margin-top: spacer(4);
+    margin-bottom: 0;
+  }
 }
